General improvements. Timer.

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Mahjong Solitarie Classic",
+    "name": "Mahjong Solitaire Classic",
     "short_name": "Mahjong",
     "theme_color": "#A0CAB5",
     "background_color": "#A0CAB5",
