--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,13 @@
     "start_url": "/mahjong-solitarie-classic",
     "icons": [
       {
-        "src": "img/icon.png",
+        "src": "img/icon-96x96.png",
         "sizes": "96x96",
+        "type": "image/png"
+      },
+      {
+        "src": "img/icon-512x512.png",
+        "sizes": "512x512",
         "type": "image/png"
       }
     ]
