--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
       "purpose": "any"
     }
   ],
-  "description": "Mahjong Solitaire Classic is single-player chinese puzzle where 144 tiles are shuffled and stacked in a classic disposition. To remove all the pieces and win, you'll need to find pairs of maching unblocked tiles. You've got to be smart enough to anticipate and organize your moves, or else you'll be stucked with no more free tiles that can be removed.",
+  "description": "Mahjong Solitaire Classic is a worldwide single-player chinese puzzle where 144 tiles are shuffled and stacked in a classic disposition. To remove all the pieces and win, you'll need to find pairs of maching unblocked tiles. You've got to be smart enough to anticipate and organize your moves, or else the board get stuck!",
   "dir": "ltr",
   "lang": "en",
   "categories": [
